<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/reminder_list_row_alarm_img"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_alarm_black_24dp"
        android:contentDescription="@string/reminder_list_row_alarm_img">
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_reminder_medicine_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medicine_row_text_size"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reminder_list_row_medicine_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_list_row_medicine_text" />

            <TextView
                android:id="@+id/reminder_list_row_medicine_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_reminder_time_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medicine_row_text_size">
            <TextView
                android:id="@+id/reminder_list_row_time_interval_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_list_row_time_interval_text" />

            <TextView
                android:id="@+id/reminder_list_row_time_interval_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_reminder_repeat_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medicine_row_text_size">
            <TextView
                android:id="@+id/reminder_list_row_repeat_time_interval_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_list_row_repeat_time_interval_text" />

            <TextView
                android:id="@+id/reminder_list_row_repeat_time_interval_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/reminder_list_row_options_img"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginLeft="@dimen/medicine_row_margins"
        android:layout_marginRight="@dimen/medicine_row_margins"
        android:layout_weight="1"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:textSize="@dimen/medicine_row_button_text_size"
        android:contentDescription="@string/reminder_list_row_options_img" />
</LinearLayout>